# presidential-cup-hackathon-2023

./: .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
app/: __init__.py  data.py  logging.py  modules.py
app/data/: __init__.py  core.py  nie_2022.py  tsai_2023.py
app/modules/: __init__.py  base.py  core.py  nie_2022.py  tsai_2023.py
app/pipelines/: __init__.py  base.py  tsai_2023.py
data/: DeflationCoefficient.csv  GDPperCapita.csv  cityArea.csv  city_vehicle_number.csv  gasoline_diesel_ratio.csv  giniIndex.csv  income.csv  population.csv  population_city.csv  survival_rate_original.csv  vehicle_age_composition.csv  vehicle_annual_km.csv  vehicle_sales.csv
data/GompertzData/: 2000.csv  2004.csv  2005.csv  2006.csv  2007.csv  2008.csv  2009.csv  2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv  2021.csv
data/LCA_result/: H2.xlsx  diesel.xlsx  electricity.xlsx  gasoline.xlsx
data/emission_standard/: 1988.csv  1998.csv  2004.csv  2007.csv  2017.csv  2021.csv
data/fuel_efficiency/: bus_BEV.csv  bus_FCV.csv  bus_ICEV.csv  car_BEV.csv  car_FCV.csv  car_ICEV_d.csv  car_ICEV_g.csv  heavy_truck_FCV.csv  heavy_truck_ICEV.csv  light_truck_FCV.csv  light_truck_ICEV_d.csv  light_truck_ICEV_g.csv  scooter_BEV.csv  scooter_FCV.csv  scooter_ICEV.csv  taxi_BEV.csv  taxi_FCV.csv  taxi_ICEV_d.csv  taxi_ICEV_g.csv  tour_bus_BEV.csv  tour_bus_FCV.csv  tour_bus_ICEV.csv
data/marketshare/: BEV.xlsx  BEV_FCV.xlsx  REF.xlsx
data/stock/: stock_bus.csv  stock_bus_tour_bus.csv  (+6 more)
results/: total_budget.gv  tsai-2023-sec-2-2-1-car.csv  tsai-2023-sec-2-2-1-operating_car.csv  tsai-2023-sec-2-2-1-scooter.csv  tsai-2023-sec-3-1-bus.csv  tsai-2023-sec-3-1-car.csv  tsai-2023-sec-3-1-operating_car.csv  tsai-2023-sec-3-1-scooter.csv  tsai-2023-sec-3-1-truck.csv
tests/: conftest.py  test.py
