[tool.poetry]
name = "presidential-cup-2023"
version = "0.1.0"
description = "The mono-repository for team CodeGreen in the Presidential Cup 2023."
authors = ["Harry Hsu <h@codegreen.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.12"

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
