[tool.poetry]
name = "presidential-cup-2023"
version = "0.1.0"
description = "The mono-repository for team CodeGreen in the Presidential Cup 2023."
authors = ["Harry Hsu <h@codegreen.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
sympy = "^1.12"
scipy = "^1.11.1"
absl-py = "^1.4.0"
pandas = "^2.0.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
rich = "^13.4.2"
graphviz = "^0.20.1"

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
